--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ant-upload.ant-upload-drag {
+  height: auto !important;
+}
